src/assets/components/product-page/_product-page.scss
.main {
}

.product-page {
  &__container {
    max-width: 1000px;
    padding-top: 15px;
    margin: 0 auto;
  }

  color: $color-text;
  &__navigation-list {
    color: $color-header-text;
    display: flex;
    width: fit-content;
    column-gap: 5px;
    justify-content: space-between;
    font-size: 1.2rem;
    @include media-mobile {
      display: none;
    }
  }
  &__main {
    display: flex;
    flex-direction: column;
  }

  &__title {
    font-size: 3rem;
    font-weight: 400;
    @include media-pre-mobile {
      margin-bottom: 5px;
    }
    @include media-mobile {
      text-align: center;
      font-size: 2.1rem;
    }
  }
  &__images {
    display: flex;
    flex-direction: column-reverse;
    row-gap: 4px;
  }
  &__game {
    display: flex;
    padding: 5px;
    column-gap: 15px;
    background-color: rgba(22, 32, 45, 0.6);
    @include media-store-header-pretablet {
      flex-direction: column-reverse;
      row-gap: 10px;
    }
  }


  &__buy {
    padding-left: 20px;
    height: 70px;
    position: relative;
    margin-top: 5px;
    margin-bottom: 30px;
    display: flex;
    justify-content: start;
    align-items: center;
    border-radius: 5px;
    background: linear-gradient(
      -60deg,
      rgba(226, 244, 255, 0.3) 5%,
      rgba(84, 107, 115, 0.3) 95%
    );
    color: $color-light;
    font-size: 2.5rem;
    font-weight: 400;
    @include media-pre-mobile {
      font-size: 2rem;
      height: 54px;
      margin-bottom: 42px;
    }
    @include media-mobile {
      font-size: 1.5rem;
    }
  }
  &__info {
    @include media-store-header-pretablet {
      display:flex;
      column-gap: 20px;
      
    }
  }
  &__game-to-buy {
    font-weight: 400;
  }
  &__buy-buttons {
    display: flex;
    justify-content: flex-end;
    position: absolute;
    bottom: -25px;
    right: 21px;
    @include media-pre-mobile {
      bottom: -37px;
    }
    @include media-mobile {
      right: 0;
    }
  }
  &__price {
    font-size: 1.6rem;
    width: 97px;
    height: 32px;
    color: $color-text;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.images {
  &__main-image {
    flex: 1;
    cursor: pointer;
  }
}

.image_active {
  border: 2px solid $color-button-text;
}
.image-list {
  display: flex;
  justify-content: flex-start;
  column-gap: 4px;
  &__image-item {
    width: 147px;
    height: 82.8px;
    
    img {
      width: 100%;
      height: 100%;
      cursor: pointer;
    }

    @include media-mobile {
      height: 60px;
    }
  }
}

.info {
  &__preview {
    width: 100%;
    @include media-store-header-pretablet {
      width: 40%;
      height: 120px;
    }
    @include media-pre-mobile {
      display: none;
    }
  }

  &__text-block {
    @include media-pre-mobile {
      padding: 0 10px;
    }
  }
  &__description {
    font-size: 1.5rem;
    text-align: left;
  }
  &__list {
    margin: 20px 0;
    @include media-store-header-pretablet {
      margin: 5px 0;
    }
  }
  &__item {
    text-transform: uppercase;
    font-size: 1.6rem;
    color: $color-header-text;
    display: flex;
    margin: 5px 0;
    @include media-store-header-pretablet {
      font-size: 1.2rem;
      
    }
  }
  &__subtitle {
    display: inline-block;
    min-width: 140px;
    @include media-store-header-pretablet {
      min-width: 100px;
      
    }
    @include media-mobile {
      min-width: 82px;
    }
  }
  &__other-text {
    text-transform: none;
    color: $color-button-text;
  }
  &__tags {
    margin-top: 10px;
    display: flex;
    column-gap: 5px;
    font-size: 1.1rem;
    flex-wrap: wrap;
    row-gap: 5px;
    > * {
      display: block !important;
    }
  }
}

.buy-buttons__container {
  display: flex;
  background-color: $color-dark;
  border-radius: 5px;
  padding: 3px;
  column-gap: 5px;
}

.mixed {
  color: #b9a074;
}

.positive {
  color: $color-button-text;
}

